bg dan responsive

--- a/index.html
+++ b/index.html
@@ -3,12 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cek Khodam Random</title>
+    <title>Cek Khodam Wkwkwk</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      body {
+        /* background-color: rgb(184, 183, 183); */
+        background-color: rgb(38, 38, 38);
+      }
+      /* tablet */
+      @media (max-width: 768px) {
+        html {
+          font-size: 62.5%;
+        }
+        .container {
+          max-width: 78%;
+        }
+      }
+      /* phone */
+      @media (max-width: 450px) {
+        html {
+          font-size: 45%;
+        }
+        .container {
+          max-width: 78%;
+        }
+      }
+    </style>
   </head>
 
   <body>
-    <div class="max-w-md w-full bg-white p-8 rounded shadow-lg m-auto mt-40">
+    <div
+      class="max-w-md w-full bg-white p-8 rounded shadow-lg m-auto mt-40 container"
+    >
       <h2 class="text-2xl font-bold mb-8 text-center">Cek Khodam</h2>
       <form id="khodamForm" action="#" method="POST">
         <div class="mb-4">
