--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
           font-size: 62.5%;
         }
         .container {
-          max-width: 78%;
+          max-width: 90%;
+          height: 400px;
         }
       }
       /* phone */
       @media (max-width: 450px) {
         html {
-          font-size: 45%;
+          font-size: 55%;
         }
         .container {
-          max-width: 78%;
-        }
+          max-width: 90%;
+          height: 400px;
       }
     </style>
   </head>
