--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         .container {
           max-width: 98%;
           height: 400px;
+        }
+        input {
+          height: 35px;
+        }
       }
     </style>
   </head>
