--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
           alert("Nama tidak boleh kosong!");
           return;
         }
-        if (nama == "niyak") {
+        // khusus mbak niyak
+        if (nama == "Niyak") {
           const resultContainer = document.getElementById("result");
           resultContainer.innerHTML = `<p class="text-2xl text-blue-500 font-bold">"${nama}"</p><br>
         <h4 class="text-2xl text-blue-500 font-bold">Kodam : Tuyul Ceperet</h4>`;
@@ -135,10 +136,43 @@
           inputNama.value = "";
           return;
         }
-        if (nama === "utes") {
+        if (nama === "Utees") {
           const resultContainer = document.getElementById("result");
           resultContainer.innerHTML = `<p class="text-2xl text-blue-500 font-bold">"${nama}"</p><br>
         <h4 class="text-2xl text-blue-500 font-bold">Kodam : Tuyul Ceperet</h4>`;
+          const inputNama = document.getElementById("nama");
+          inputNama.value = "";
+          return;
+        }
+        if (nama === "Niya") {
+          const resultContainer = document.getElementById("result");
+          resultContainer.innerHTML = `<p class="text-2xl text-blue-500 font-bold">"${nama}"</p><br>
+        <h4 class="text-2xl text-blue-500 font-bold">Kodam : Tuyul Ceperet</h4>`;
+          const inputNama = document.getElementById("nama");
+          inputNama.value = "";
+          return;
+        }
+        // khusus mbak yayas
+        if (nama == "Akyas") {
+          const resultContainer = document.getElementById("result");
+          resultContainer.innerHTML = `<p class="text-2xl text-blue-500 font-bold">"${nama}"</p><br>
+        <h4 class="text-2xl text-blue-500 font-bold">Kodam : Kentut Berdahak</h4>`;
+          const inputNama = document.getElementById("nama");
+          inputNama.value = "";
+          return;
+        }
+        if (nama === "Yayas") {
+          const resultContainer = document.getElementById("result");
+          resultContainer.innerHTML = `<p class="text-2xl text-blue-500 font-bold">"${nama}"</p><br>
+        <h4 class="text-2xl text-blue-500 font-bold">Kodam : Kentut Berdahak</h4>`;
+          const inputNama = document.getElementById("nama");
+          inputNama.value = "";
+          return;
+        }
+        if (nama === "Ayak") {
+          const resultContainer = document.getElementById("result");
+          resultContainer.innerHTML = `<p class="text-2xl text-blue-500 font-bold">"${nama}"</p><br>
+        <h4 class="text-2xl text-blue-500 font-bold">Kodam : Kentut Berdahak</h4>`;
           const inputNama = document.getElementById("nama");
           inputNama.value = "";
           return;
